[package]
name = "memento-cabi"
version = "0.1.0"
authors = ["TSH Labs"]
description = "A Whisper implementation in Rust - C interface"
homepage = "https://github.com/tshlabs/memento"
documentation = "https://docs.rs/memento/"
repository = "https://github.com/tshlabs/memento.git"
readme = "README.md"
license = "Apache-2.0/MIT"
keywords = ["whisper", "graphite", "carbon", "metrics"]

[workspace]

[dependencies]
chrono = "0.4.0"
memento = { path = ".." }

[lib]
name = "memento"
crate-type = ["cdylib"]
